// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`select_distinct.sql > line 8 1`] = `
[
  "SELECT DISTINCT two FROM onek ORDER BY 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "distinctClause": [
              {},
            ],
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 25,
                  "relname": "onek",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 39,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "two",
                          },
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 13 1`] = `
[
  "SELECT DISTINCT ten FROM onek ORDER BY 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "distinctClause": [
              {},
            ],
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 25,
                  "relname": "onek",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 39,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ten",
                          },
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 18 1`] = `
[
  "SELECT DISTINCT string4 FROM onek ORDER BY 1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "distinctClause": [
              {},
            ],
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 29,
                  "relname": "onek",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 43,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "string4",
                          },
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 24 1`] = `
[
  "SELECT DISTINCT two, string4, ten
   FROM onek
   ORDER BY two using <, string4 using <, ten using <",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "distinctClause": [
              {},
            ],
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 42,
                  "relname": "onek",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": 69,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "two",
                          },
                        },
                      ],
                      "location": 59,
                    },
                  },
                  "sortby_dir": "SORTBY_USING",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  "useOp": [
                    {
                      "String": {
                        "sval": "<",
                      },
                    },
                  ],
                },
              },
              {
                "SortBy": {
                  "location": 86,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "string4",
                          },
                        },
                      ],
                      "location": 72,
                    },
                  },
                  "sortby_dir": "SORTBY_USING",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  "useOp": [
                    {
                      "String": {
                        "sval": "<",
                      },
                    },
                  ],
                },
              },
              {
                "SortBy": {
                  "location": 99,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ten",
                          },
                        },
                      ],
                      "location": 89,
                    },
                  },
                  "sortby_dir": "SORTBY_USING",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  "useOp": [
                    {
                      "String": {
                        "sval": "<",
                      },
                    },
                  ],
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "two",
                          },
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 21,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "string4",
                          },
                        },
                      ],
                      "location": 21,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 30,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "ten",
                          },
                        },
                      ],
                      "location": 30,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 35 1`] = `
[
  "SELECT DISTINCT p.age FROM person* p ORDER BY age using >",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "distinctClause": [
              {},
            ],
            "fromClause": [
              {
                "RangeVar": {
                  "alias": {
                    "aliasname": "p",
                  },
                  "inh": true,
                  "location": 27,
                  "relname": "person",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": 56,
                  "node": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "age",
                          },
                        },
                      ],
                      "location": 46,
                    },
                  },
                  "sortby_dir": "SORTBY_USING",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                  "useOp": [
                    {
                      "String": {
                        "sval": ">",
                      },
                    },
                  ],
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "p",
                          },
                        },
                        {
                          "String": {
                            "sval": "age",
                          },
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 42 1`] = `
[
  "SELECT count(*) FROM
  (SELECT DISTINCT two, four, two FROM tenk1) ss",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeSubselect": {
                  "alias": {
                    "aliasname": "ss",
                  },
                  "subquery": {
                    "SelectStmt": {
                      "distinctClause": [
                        {},
                      ],
                      "fromClause": [
                        {
                          "RangeVar": {
                            "inh": true,
                            "location": 60,
                            "relname": "tenk1",
                            "relpersistence": "p",
                          },
                        },
                      ],
                      "limitOption": "LIMIT_OPTION_DEFAULT",
                      "op": "SETOP_NONE",
                      "targetList": [
                        {
                          "ResTarget": {
                            "location": 40,
                            "val": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "two",
                                    },
                                  },
                                ],
                                "location": 40,
                              },
                            },
                          },
                        },
                        {
                          "ResTarget": {
                            "location": 45,
                            "val": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "four",
                                    },
                                  },
                                ],
                                "location": 45,
                              },
                            },
                          },
                        },
                        {
                          "ResTarget": {
                            "location": 51,
                            "val": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "two",
                                    },
                                  },
                                ],
                                "location": 51,
                              },
                            },
                          },
                        },
                      ],
                    },
                  },
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "agg_star": true,
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "count",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 59 1`] = `
[
  "SET jit_above_cost=0",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "ival": {},
                  "location": 19,
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "jit_above_cost",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 61 1`] = `
[
  "EXPLAIN (costs off)
SELECT DISTINCT g%1000 FROM generate_series(0,9999) g",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "distinctClause": [
                  {},
                ],
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "g",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {},
                                        "location": 64,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 9999,
                                        },
                                        "location": 66,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 48,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 36,
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "g",
                                  },
                                },
                              ],
                              "location": 36,
                            },
                          },
                          "location": 37,
                          "name": [
                            {
                              "String": {
                                "sval": "%",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {
                                "ival": 1000,
                              },
                              "location": 38,
                            },
                          },
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 64 1`] = `
[
  "CREATE TABLE distinct_group_1 AS
SELECT DISTINCT g%1000 FROM generate_series(0,9999) g",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 13,
                "relname": "distinct_group_1",
                "relpersistence": "p",
              },
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "distinctClause": [
                  {},
                ],
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "g",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {},
                                        "location": 77,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 9999,
                                        },
                                        "location": 79,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 61,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 49,
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "g",
                                  },
                                },
                              ],
                              "location": 49,
                            },
                          },
                          "location": 50,
                          "name": [
                            {
                              "String": {
                                "sval": "%",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {
                                "ival": 1000,
                              },
                              "location": 51,
                            },
                          },
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 67 1`] = `
[
  "SET jit_above_cost TO DEFAULT",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_SET_DEFAULT",
            "name": "jit_above_cost",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 69 1`] = `
[
  "CREATE TABLE distinct_group_2 AS
SELECT DISTINCT (g%1000)::text FROM generate_series(0,9999) g",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 13,
                "relname": "distinct_group_2",
                "relpersistence": "p",
              },
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "distinctClause": [
                  {},
                ],
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "g",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {},
                                        "location": 85,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 9999,
                                        },
                                        "location": 87,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 69,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 49,
                      "val": {
                        "TypeCast": {
                          "arg": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "g",
                                      },
                                    },
                                  ],
                                  "location": 50,
                                },
                              },
                              "location": 51,
                              "name": [
                                {
                                  "String": {
                                    "sval": "%",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1000,
                                  },
                                  "location": 52,
                                },
                              },
                            },
                          },
                          "location": 57,
                          "typeName": {
                            "location": 59,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 72 1`] = `
[
  "SET enable_seqscan = 0",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "ival": {},
                  "location": 21,
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "enable_seqscan",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 75 1`] = `
[
  "EXPLAIN (costs off)
SELECT DISTINCT hundred, two FROM tenk1",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "distinctClause": [
                  {},
                ],
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 54,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 36,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "hundred",
                              },
                            },
                          ],
                          "location": 36,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 45,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "two",
                              },
                            },
                          ],
                          "location": 45,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 78 1`] = `
[
  "RESET enable_seqscan",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "enable_seqscan",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 80 1`] = `
[
  "SET enable_hashagg=TRUE",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 19,
                  "sval": {
                    "sval": "true",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "enable_hashagg",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 91 1`] = `
[
  "CREATE TABLE distinct_hash_1 AS
SELECT DISTINCT g%1000 FROM generate_series(0,9999) g",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 13,
                "relname": "distinct_hash_1",
                "relpersistence": "p",
              },
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "distinctClause": [
                  {},
                ],
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "g",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {},
                                        "location": 76,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 9999,
                                        },
                                        "location": 78,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 60,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 48,
                      "val": {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "g",
                                  },
                                },
                              ],
                              "location": 48,
                            },
                          },
                          "location": 49,
                          "name": [
                            {
                              "String": {
                                "sval": "%",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {
                                "ival": 1000,
                              },
                              "location": 50,
                            },
                          },
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 96 1`] = `
[
  "CREATE TABLE distinct_hash_2 AS
SELECT DISTINCT (g%1000)::text FROM generate_series(0,9999) g",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 13,
                "relname": "distinct_hash_2",
                "relpersistence": "p",
              },
            },
            "objtype": "OBJECT_TABLE",
            "query": {
              "SelectStmt": {
                "distinctClause": [
                  {},
                ],
                "fromClause": [
                  {
                    "RangeFunction": {
                      "alias": {
                        "aliasname": "g",
                      },
                      "functions": [
                        {
                          "List": {
                            "items": [
                              {
                                "FuncCall": {
                                  "args": [
                                    {
                                      "A_Const": {
                                        "ival": {},
                                        "location": 84,
                                      },
                                    },
                                    {
                                      "A_Const": {
                                        "ival": {
                                          "ival": 9999,
                                        },
                                        "location": 86,
                                      },
                                    },
                                  ],
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "generate_series",
                                      },
                                    },
                                  ],
                                  "location": 68,
                                },
                              },
                              {},
                            ],
                          },
                        },
                      ],
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 48,
                      "val": {
                        "TypeCast": {
                          "arg": {
                            "A_Expr": {
                              "kind": "AEXPR_OP",
                              "lexpr": {
                                "ColumnRef": {
                                  "fields": [
                                    {
                                      "String": {
                                        "sval": "g",
                                      },
                                    },
                                  ],
                                  "location": 49,
                                },
                              },
                              "location": 50,
                              "name": [
                                {
                                  "String": {
                                    "sval": "%",
                                  },
                                },
                              ],
                              "rexpr": {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1000,
                                  },
                                  "location": 51,
                                },
                              },
                            },
                          },
                          "location": 56,
                          "typeName": {
                            "location": 58,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 99 1`] = `
[
  "SET enable_sort=TRUE",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 16,
                  "sval": {
                    "sval": "true",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "enable_sort",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 101 1`] = `
[
  "SET work_mem TO DEFAULT",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_SET_DEFAULT",
            "name": "work_mem",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 109 1`] = `
[
  "(SELECT * FROM distinct_hash_1 EXCEPT SELECT * FROM distinct_group_1)
  UNION ALL
(SELECT * FROM distinct_group_1 EXCEPT SELECT * FROM distinct_hash_1)",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "all": true,
            "larg": {
              "larg": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 15,
                      "relname": "distinct_hash_1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 8,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 8,
                        },
                      },
                    },
                  },
                ],
              },
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_EXCEPT",
              "rarg": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 52,
                      "relname": "distinct_group_1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 45,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 45,
                        },
                      },
                    },
                  },
                ],
              },
            },
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_UNION",
            "rarg": {
              "larg": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 97,
                      "relname": "distinct_group_1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 90,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 90,
                        },
                      },
                    },
                  },
                ],
              },
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_EXCEPT",
              "rarg": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 135,
                      "relname": "distinct_hash_1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 128,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 128,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 113 1`] = `
[
  "DROP TABLE distinct_hash_1",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "distinct_hash_1",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 119 1`] = `
[
  "SET parallel_tuple_cost=0",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "ival": {},
                  "location": 24,
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "parallel_tuple_cost",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 125 1`] = `
[
  "EXPLAIN (costs off)
SELECT DISTINCT four FROM tenk1",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "distinctClause": [
                  {},
                ],
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 46,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 36,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "four",
                              },
                            },
                          ],
                          "location": 36,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 129 1`] = `
[
  "SELECT DISTINCT four FROM tenk1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "distinctClause": [
              {},
            ],
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 26,
                  "relname": "tenk1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "four",
                          },
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 131 1`] = `
[
  "CREATE OR REPLACE FUNCTION distinct_func(a INT) RETURNS INT AS $$
  BEGIN
    RETURN a;
  END;
$$ LANGUAGE plpgsql PARALLEL UNSAFE",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "distinct_func",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
  BEGIN
    RETURN a;
  END;
",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 60,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "plpgsql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 98,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "unsafe",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "parallel",
                  "location": 115,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 43,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                  "name": "a",
                },
              },
            ],
            "replace": true,
            "returnType": {
              "location": 56,
              "names": [
                {
                  "String": {
                    "sval": "pg_catalog",
                  },
                },
                {
                  "String": {
                    "sval": "int4",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 138 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT DISTINCT distinct_func(1) FROM tenk1",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "distinctClause": [
                  {},
                ],
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 58,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 36,
                      "val": {
                        "FuncCall": {
                          "args": [
                            {
                              "A_Const": {
                                "ival": {
                                  "ival": 1,
                                },
                                "location": 50,
                              },
                            },
                          ],
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "distinct_func",
                              },
                            },
                          ],
                          "location": 36,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 152 1`] = `
[
  "RESET max_parallel_workers_per_gather",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "max_parallel_workers_per_gather",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 163 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT DISTINCT four FROM tenk1 WHERE four = 0",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "distinctClause": [
                  {},
                ],
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 46,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 36,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "four",
                              },
                            },
                          ],
                          "location": 36,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "four",
                            },
                          },
                        ],
                        "location": 58,
                      },
                    },
                    "location": 63,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 65,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 167 1`] = `
[
  "SELECT DISTINCT four FROM tenk1 WHERE four = 0",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "distinctClause": [
              {},
            ],
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 26,
                  "relname": "tenk1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "four",
                          },
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "four",
                        },
                      },
                    ],
                    "location": 38,
                  },
                },
                "location": 43,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {},
                    "location": 45,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 170 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT DISTINCT four FROM tenk1 WHERE four = 0 AND two <> 0",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "distinctClause": [
                  {},
                ],
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 46,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 36,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "four",
                              },
                            },
                          ],
                          "location": 36,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "BoolExpr": {
                    "args": [
                      {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "four",
                                  },
                                },
                              ],
                              "location": 58,
                            },
                          },
                          "location": 63,
                          "name": [
                            {
                              "String": {
                                "sval": "=",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {},
                              "location": 65,
                            },
                          },
                        },
                      },
                      {
                        "A_Expr": {
                          "kind": "AEXPR_OP",
                          "lexpr": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "two",
                                  },
                                },
                              ],
                              "location": 71,
                            },
                          },
                          "location": 75,
                          "name": [
                            {
                              "String": {
                                "sval": "<>",
                              },
                            },
                          ],
                          "rexpr": {
                            "A_Const": {
                              "ival": {},
                              "location": 78,
                            },
                          },
                        },
                      },
                    ],
                    "boolop": "AND_EXPR",
                    "location": 67,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 174 1`] = `
[
  "SELECT DISTINCT four FROM tenk1 WHERE four = 0 AND two <> 0",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "distinctClause": [
              {},
            ],
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 26,
                  "relname": "tenk1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "four",
                          },
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "BoolExpr": {
                "args": [
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "four",
                              },
                            },
                          ],
                          "location": 38,
                        },
                      },
                      "location": 43,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {},
                          "location": 45,
                        },
                      },
                    },
                  },
                  {
                    "A_Expr": {
                      "kind": "AEXPR_OP",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "two",
                              },
                            },
                          ],
                          "location": 51,
                        },
                      },
                      "location": 55,
                      "name": [
                        {
                          "String": {
                            "sval": "<>",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {},
                          "location": 58,
                        },
                      },
                    },
                  },
                ],
                "boolop": "AND_EXPR",
                "location": 47,
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 177 1`] = `
[
  "EXPLAIN (COSTS OFF)
SELECT DISTINCT four,1,2,3 FROM tenk1 WHERE four = 0",
  {
    "stmts": [
      {
        "stmt": {
          "ExplainStmt": {
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "off",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "costs",
                  "location": 9,
                },
              },
            ],
            "query": {
              "SelectStmt": {
                "distinctClause": [
                  {},
                ],
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 52,
                      "relname": "tenk1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 36,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "four",
                              },
                            },
                          ],
                          "location": 36,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 41,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 41,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 43,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 43,
                        },
                      },
                    },
                  },
                  {
                    "ResTarget": {
                      "location": 45,
                      "val": {
                        "A_Const": {
                          "ival": {
                            "ival": 3,
                          },
                          "location": 45,
                        },
                      },
                    },
                  },
                ],
                "whereClause": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "four",
                            },
                          },
                        ],
                        "location": 64,
                      },
                    },
                    "location": 69,
                    "name": [
                      {
                        "String": {
                          "sval": "=",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 71,
                      },
                    },
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 181 1`] = `
[
  "SELECT DISTINCT four,1,2,3 FROM tenk1 WHERE four = 0",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "distinctClause": [
              {},
            ],
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 32,
                  "relname": "tenk1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 16,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "four",
                          },
                        },
                      ],
                      "location": 16,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 21,
                  "val": {
                    "A_Const": {
                      "ival": {
                        "ival": 1,
                      },
                      "location": 21,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 23,
                  "val": {
                    "A_Const": {
                      "ival": {
                        "ival": 2,
                      },
                      "location": 23,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 25,
                  "val": {
                    "A_Const": {
                      "ival": {
                        "ival": 3,
                      },
                      "location": 25,
                    },
                  },
                },
              },
            ],
            "whereClause": {
              "A_Expr": {
                "kind": "AEXPR_OP",
                "lexpr": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "four",
                        },
                      },
                    ],
                    "location": 44,
                  },
                },
                "location": 49,
                "name": [
                  {
                    "String": {
                      "sval": "=",
                    },
                  },
                ],
                "rexpr": {
                  "A_Const": {
                    "ival": {},
                    "location": 51,
                  },
                },
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 195 1`] = `
[
  "SELECT f1, f1 IS DISTINCT FROM 2 as "not 2" FROM disttable",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 49,
                  "relname": "disttable",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "f1",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 11,
                  "name": "not 2",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_DISTINCT",
                      "lexpr": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "f1",
                              },
                            },
                          ],
                          "location": 11,
                        },
                      },
                      "location": 14,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 31,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 201 1`] = `
[
  "SELECT 1 IS DISTINCT FROM 2 as "yes"",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "yes",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_DISTINCT",
                      "lexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 7,
                        },
                      },
                      "location": 9,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 26,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`select_distinct.sql > line 207 1`] = `
[
  "SELECT 1 IS NOT DISTINCT FROM 2 as "no"",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "name": "no",
                  "val": {
                    "A_Expr": {
                      "kind": "AEXPR_NOT_DISTINCT",
                      "lexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 7,
                        },
                      },
                      "location": 9,
                      "name": [
                        {
                          "String": {
                            "sval": "=",
                          },
                        },
                      ],
                      "rexpr": {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 30,
                        },
                      },
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
